--- a/css/blocks/delivery.scss
+++ b/css/blocks/delivery.scss
@@ -208,6 +208,9 @@ $phones: 480px;
 	position: absolute;
 	bottom: -22%;
     right: 38%;
+    padding: 0;
+    border: none;
+    cursor: pointer;
     @include tablets {
 	position: absolute;
     right: 40%;
@@ -222,8 +225,12 @@ $phones: 480px;
     color: #ffffff;
 	font-family: 'Ubuntu';
 	font-size: 0.875rem;
+	background-color: transparent;
 	font-weight: 300;
 	line-height: 1.5rem;
+	padding: 0;
+    border: none;
+    cursor: pointer;
 	@include tablets {
 	right: 25%;
 }
