--- a/css/blocks/hero__container.scss
+++ b/css/blocks/hero__container.scss
@@ -1,6 +1,3 @@
-
-
-
 $tablets: 768px;
 $phones: 480px;
 
@@ -21,6 +18,10 @@ $phones: 480px;
 	@media (max-width: $phones) {
 		@content;
 	}
+}
+
+body {
+	font-size: 16px;
 }
 
 .hero__container{
