--- a/css/blocks/people-page.css
+++ b/css/blocks/people-page.css
@@ -178,3 +178,8 @@
   font-weight: 500;
   line-height: 1.875rem;
   text-transform: uppercase; }
+
+.people__comment_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
