--- a/css/main.css
+++ b/css/main.css
@@ -492,6 +492,9 @@ html {
     html {
       font-size: 11px; } }
 
+body {
+  font-size: 16px; }
+
 .hero__container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1036,6 +1039,11 @@ ul {
   font-weight: 500;
   line-height: 1.875rem;
   text-transform: uppercase; }
+
+.people__comment_active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
 
 .team__page {
   display: -webkit-box;
@@ -1840,186 +1848,155 @@ ul {
   background-color: #fff;
   fill: #000; }
 
-.burghers__page {
+.slider__menu {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
+  width: 100vw;
+  height: 100vh;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  width: 100%;
-  height: 100vh;
+  border: solid 1px #293342;
   background-color: #f9b43b;
+  background-image: -webkit-gradient(linear, left bottom, left top, from(#f9b43b), color-stop(48%, #eb8c38), color-stop(74%, #f9b43b), to(#f9b43b));
   background-image: -webkit-linear-gradient(bottom, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%, #f9b43b 100%);
   background-image: -o-linear-gradient(bottom, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%, #f9b43b 100%);
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#f9b43b), color-stop(48%, #eb8c38), color-stop(74%, #f9b43b), to(#f9b43b));
   background-image: linear-gradient(to top, #f9b43b 0%, #eb8c38 48%, #f9b43b 74%, #f9b43b 100%); }
 
-.burghers__container {
-  position: relative;
+.slider {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  position: relative;
+  width: 85%;
+  height: 75%;
+  border: solid 1px #bd1701;
+  max-width: 1000px; }
+
+.slider__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  border: solid 1px #adf442; }
+
+.slider__elem {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-width: 27%;
+  height: 100%;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  width: 68.75rem;
-  height: 72%;
-  overflow: hidden; }
+  align-items: center; }
   @media (max-width: 768px) {
-    .burghers__container {
+    .slider__elem {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
-      height: 100%; } }
+      min-width: 33%; } }
+  @media (max-width: 480px) {
+    .slider__elem {
+      min-width: 24%; } }
 
-.burghers__content {
+.slider__img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  min-width: 100%;
-  height: 95%;
-  z-index: 1; }
-  @media (max-width: 768px) {
-    .burghers__content {
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      -webkit-box-align: center;
-      -ms-flex-align: center;
-      align-items: center;
-      height: 100vh; } }
-
-.content__elem {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: relative;
   width: 50%;
   height: 100%;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center;
-  z-index: 2; }
+  align-items: center; }
   @media (max-width: 768px) {
-    .content__elem {
-      -webkit-box-pack: end;
-      -ms-flex-pack: end;
-      justify-content: flex-end; } }
-  @media (max-width: 480px) {
-    .content__elem {
-      width: 90%;
-      -webkit-box-pack: center;
-      -ms-flex-pack: center;
-      justify-content: center;
+    .slider__img {
+      width: 100%;
+      min-height: 50%;
       -webkit-box-align: end;
       -ms-flex-align: end;
-      align-items: flex-end; } }
+      align-items: flex-end;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center; } }
 
-.content__txt {
+.slider__details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 50%;
-  height: 100%; }
-  @media (max-width: 768px) {
-    .content__txt {
-      text-align: center; } }
-
-.burghers__arrow {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
+  width: auto;
+  height: 90%;
+  position: absolute;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  width: 75%;
-  position: absolute;
-  z-index: 5; }
-
-.elem__details-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  left: 0;
-  height: 100%;
-  width: auto;
+  left: 2%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  z-index: 3; }
+  flex-direction: column; }
   @media (max-width: 768px) {
-    .elem__details-item {
+    .slider__details {
       -webkit-box-orient: horizontal;
       -webkit-box-direction: normal;
       -ms-flex-direction: row;
       flex-direction: row;
-      height: 100%;
-      width: 100%;
-      top: 5%; } }
-  @media (max-width: 480px) {
-    .elem__details-item {
-      top: 10%; } }
+      width: 90%;
+      height: auto;
+      top: 1%;
+      left: 5%; } }
 
-.elem__img-item {
+.composition__txt {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: 1; }
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Gagalin-Regular';
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28.11px; }
 
-.composition__elem {
+.composition__img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.composition__elem {
+  width: 90px;
+  height: 90px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #f08c33;
+  border-radius: 5%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  width: 5.625rem;
-  height: 5.625rem;
-  border-radius: 8%;
-  background-color: #f08c33; }
-
-.composition__txt {
-  color: #ffffff;
-  font-family: 'Gagalin-Regular';
-  font-size: 14px;
-  font-weight: 400; }
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .brg-img {
   width: 31.5625rem;
@@ -2030,58 +2007,59 @@ ul {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  width: 3.75rem;
-  height: 4.6875rem;
-  background-repeat: no-repeat;
-  background-size: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   -ms-flex-align: center;
-  align-items: center; }
+  align-items: center;
+  color: #ffffff;
+  font-family: 'Gagalin-Regular';
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  opacity: 0.4; }
 
 .kkal_txt {
+  position: absolute;
+  text-align: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  height: 85%;
+  top: 40%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-pack: end;
-  -ms-flex-pack: end;
-  justify-content: flex-end; }
+  flex-direction: column; }
+  @media (max-width: 768px) {
+    .kkal_txt {
+      height: 66%; } }
 
 .kkal_txt1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   opacity: 0.5;
-  margin-top: 145%;
   color: #ffffff;
   font-family: 'Gagalin-Regular';
-  font-size: 1.25rem;
+  font-size: 20px;
   font-weight: 400;
-  line-height: 1.5rem;
-  margin-left: 6%; }
-
-.kkal-img {
-  position: absolute; }
+  line-height: 24px; }
 
 .kkal_txt2 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   opacity: 0.5;
   color: #ffffff;
   font-family: 'Gagalin-Regular';
-  font-size: 0.875rem;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 1.5rem;
-  margin-top: 27%; }
+  line-height: 24px; }
 
-.content__txt {
+.slider__txt {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2089,39 +2067,55 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: space-evenly;
-  -ms-flex-pack: space-evenly;
-  justify-content: space-evenly; }
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  height: 100%;
+  width: 50%; }
+  @media (max-width: 768px) {
+    .slider__txt {
+      width: 80%;
+      min-height: 50%;
+      text-align: center; } }
 
 .details__name {
   color: #ffffff;
   font-family: 'Gagalin-Regular';
-  font-size: 3.7rem;
+  font-size: 4.5rem;
   font-weight: 400;
   line-height: 4rem; }
 
-.content__txt-details {
-  color: #ffffff;
-  font-family: 'Ubuntu';
-  font-size: 0.875rem;
-  font-weight: 300;
-  line-height: 1.5rem; }
-
 .details__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   color: #e35028;
   font-family: 'Gagalin-Regular';
-  font-size: 1.875rem;
+  font-size: 30px;
   font-weight: 400;
-  line-height: 1.75rem; }
+  line-height: 28.08px; }
   @media (max-width: 768px) {
     .details__price {
-      text-align: start; } }
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      margin-right: 20%; } }
 
 .price__nr {
   font-size: 4.5rem; }
 
 .price__txt {
-  letter-spacing: -0.75px; }
+  letter-spacing: -0.75px;
+  margin-top: 3%; }
+
+.content__txt-details {
+  color: #ffffff;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 23.97px; }
 
 .burghers__btn {
   display: -webkit-box;
@@ -2147,21 +2141,29 @@ ul {
   cursor: pointer;
   padding: 0;
   border: none;
-  right: 10%;
-  bottom: 16%; }
+  right: 15%;
+  bottom: 11%; }
   @media (max-width: 768px) {
     .burghers__btn {
-      right: 32%;
-      bottom: 6%; } }
+      right: 25%;
+      bottom: 4%; } }
   @media (max-width: 480px) {
     .burghers__btn {
-      right: 25%; } }
+      right: 17%;
+      bottom: 2%; } }
 
-.burghers__content1 {
-  margin-right: 100vw; }
-
-.burghers__content3 {
-  margin-left: 100vw; }
+.burghers__arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  width: 70%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .mobile-menu {
   display: -webkit-box;
