--- a/css/main.scss
+++ b/css/main.scss
@@ -16,5 +16,5 @@ $phones: 480px;
 @import "general/media.scss";
 @import "blocks/burghers.scss";
 @import "blocks/mobile-menu.scss";
-
+@import "blocks/slick.scss";
 
