--- a/css/blocks/delivery.scss
+++ b/css/blocks/delivery.scss
@@ -23,6 +23,7 @@ $phones: 480px;
 .order__section{
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
 	width: 100%;
 	height: 100vh;
 	background-image: url(../img/order.png);
@@ -58,11 +59,13 @@ $phones: 480px;
 	position: relative;
 	width: 98%; 
 	margin-top: 10%;
-	justify-content: space-between;
+	justify-content: center;
 }
 .order__form{
 	flex: 1;
     flex-direction: row;
+    max-width: 1100px;
+    justify-content: center;
     display: flex;
     justify-content: space-between;
     @include tablets {
@@ -269,4 +272,115 @@ $phones: 480px;
 	background-image: url(../img/chek.png);
 	background-repeat: no-repeat;
 	border-radius: 0.125rem;
+}
+.error{
+	color: #f9b43b;
+    font-family: 'Ubuntu';
+    font-size: 0.875rem;
+    font-weight: 300;
+    line-height: 1.5rem;
+}
+.send__true{
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	width: 100vw;
+    height: 100vh;
+    background-color: #2f3234;
+	opacity: 0.92;
+}
+.send__true-active{
+	display: flex;
+}
+.send__false-active{
+	display: flex;
+}
+.send__container{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	width: 196px;
+	height: 106px;
+	box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
+	background-color: #ffffff;
+	border-radius: 4%;
+	align-items: center;
+}
+.false__container{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	width: 196px;
+	height: 106px;
+	box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
+	background-color: #ffffff;
+	border-radius: 4%;
+	align-items: center;
+}
+.send__true-message{
+	text-align: center;
+	color: #2f3234;
+	font-family: 'Ubuntu';
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 24px;
+}
+.send__false-message{
+	text-align: center;
+	color: #2f3234;
+	font-family: 'Ubuntu';
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 24px;
+}
+.button__true{
+	width: 97px;
+	height: 35px;
+	border-radius: 5%;
+	background-color: #e45028;
+	padding: 0;
+    border: none;
+    cursor: pointer;
+}
+
+.button__true{
+	color: #ffffff;
+	font-family: 'Ubuntu';
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 30px;
+	text-transform: uppercase;
+}
+.button__false{
+	width: 97px;
+	height: 35px;
+	border-radius: 5%;
+	background-color: #e45028;
+	padding: 0;
+    border: none;
+    cursor: pointer;
+}
+.button__false{
+	color: #ffffff;
+	font-family: 'Ubuntu';
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 30px;
+	text-transform: uppercase;
+}
+.send__false{
+	display: none;
+	justify-content: center;
+	align-items: center;
+	position: fixed;
+	top: 0;
+	width: 100vw;
+    height: 100vh;
+    background-color: #2f3234;
+	opacity: 0.92;
+}
+.send__false-active{
+	display: flex;
 }
