--- a/css/blocks/people-page.css
+++ b/css/blocks/people-page.css
@@ -155,6 +155,9 @@
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  padding: 0;
+  border: none;
+  cursor: pointer;
   width: 6.875rem;
   height: 2.1875rem;
   border-radius: 0.3125rem;
@@ -183,3 +186,103 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+
+.more-overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #2f3234;
+  opacity: 0.92; }
+
+.bText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-family: 'Ubuntu';
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 30px;
+  text-transform: uppercase; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2f3234;
+  opacity: 0.92;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  z-index: 10000; }
+
+.container {
+  position: relative; }
+
+.content {
+  background: #444;
+  border-radius: 5px;
+  padding: 20px;
+  width: 460px;
+  height: 254px;
+  color: #2f3234;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  background-color: #ffffff;
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.close {
+  font-family: 'Righteous', cursive;
+  color: #ec8468;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 20px;
+  width: 15px;
+  height: 15px;
+  line-height: 20px;
+  text-align: center;
+  text-decoration: none; }
+
+.content b {
+  color: #2f3234;
+  font-family: Gagalin;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28.11px; }
