--- a/css/blocks/people-page.scss
+++ b/css/blocks/people-page.scss
@@ -134,6 +134,9 @@ $phones: 480px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 0;
+	border: none;
+	cursor: pointer;
 	width: 6.875rem;
 	height: 2.1875rem;
 	border-radius: 0.3125rem;
@@ -155,4 +158,86 @@ $phones: 480px;
 
 .people__comment_active{
 	display: flex;
+}
+
+.more-overlay{
+	display: flex;
+	width: 100vw;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	background-color: #2f3234;
+	opacity: 0.92;
+}
+
+.bText{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	color: #ffffff;
+	font-family: 'Ubuntu';
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 30px;
+	text-transform: uppercase;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2f3234;
+  opacity: 0.92;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10000;
+}
+
+.container {
+  position: relative;
+}
+
+.content {
+    background: #444;
+    border-radius: 5px;
+    padding: 20px;
+    width: 460px;
+    height: 254px;
+    color: #2f3234;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    background-color: #ffffff;
+	font-family: Ubuntu;
+	font-size: 14px;
+	font-weight: 300;
+	line-height: 24px;
+}
+
+.close {
+  font-family: 'Righteous', cursive;
+  color: #ec8468;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 20px;
+  width: 15px;
+  height: 15px;
+  line-height: 20px;
+  text-align: center;
+  text-decoration: none;
+}
+
+.content b {
+	color: #2f3234;
+font-family: Gagalin;
+font-size: 14px;
+font-weight: 400;
+line-height: 28.11px;
 }
