--- a/css/main.css
+++ b/css/main.css
@@ -1016,6 +1016,9 @@ ul {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  padding: 0;
+  border: none;
+  cursor: pointer;
   width: 6.875rem;
   height: 2.1875rem;
   border-radius: 0.3125rem;
@@ -1044,6 +1047,106 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
+
+.more-overlay {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: #2f3234;
+  opacity: 0.92; }
+
+.bText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  font-family: 'Ubuntu';
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 30px;
+  text-transform: uppercase; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #2f3234;
+  opacity: 0.92;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  z-index: 10000; }
+
+.container {
+  position: relative; }
+
+.content {
+  background: #444;
+  border-radius: 5px;
+  padding: 20px;
+  width: 460px;
+  height: 254px;
+  color: #2f3234;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  background-color: #ffffff;
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.close {
+  font-family: 'Righteous', cursive;
+  color: #ec8468;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  font-size: 20px;
+  width: 15px;
+  height: 15px;
+  line-height: 20px;
+  text-align: center;
+  text-decoration: none; }
+
+.content b {
+  color: #2f3234;
+  font-family: Gagalin;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 28.11px; }
 
 .team__page {
   display: -webkit-box;
@@ -1403,6 +1506,10 @@ ul {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
   background-image: url(../img/order.png);
@@ -1456,9 +1563,9 @@ ul {
   position: relative;
   width: 98%;
   margin-top: 10%;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between; }
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .order__form {
   -webkit-box-flex: 1;
@@ -1468,6 +1575,10 @@ ul {
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
+  max-width: 1100px;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1711,6 +1822,150 @@ ul {
   background-repeat: no-repeat;
   border-radius: 0.125rem; }
 
+.error {
+  color: #f9b43b;
+  font-family: 'Ubuntu';
+  font-size: 0.875rem;
+  font-weight: 300;
+  line-height: 1.5rem; }
+
+.send__true {
+  display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2f3234;
+  opacity: 0.92; }
+
+.send__true-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.send__false-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.send__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  width: 196px;
+  height: 106px;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
+  box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
+  background-color: #ffffff;
+  border-radius: 4%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.false__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
+  width: 196px;
+  height: 106px;
+  -webkit-box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
+  box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
+  background-color: #ffffff;
+  border-radius: 4%;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.send__true-message {
+  text-align: center;
+  color: #2f3234;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.send__false-message {
+  text-align: center;
+  color: #2f3234;
+  font-family: 'Ubuntu';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 24px; }
+
+.button__true {
+  width: 97px;
+  height: 35px;
+  border-radius: 5%;
+  background-color: #e45028;
+  padding: 0;
+  border: none;
+  cursor: pointer; }
+
+.button__true {
+  color: #ffffff;
+  font-family: 'Ubuntu';
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 30px;
+  text-transform: uppercase; }
+
+.button__false {
+  width: 97px;
+  height: 35px;
+  border-radius: 5%;
+  background-color: #e45028;
+  padding: 0;
+  border: none;
+  cursor: pointer; }
+
+.button__false {
+  color: #ffffff;
+  font-family: 'Ubuntu';
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 30px;
+  text-transform: uppercase; }
+
+.send__false {
+  display: none;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #2f3234;
+  opacity: 0.92; }
+
+.send__false-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
 .map__footer-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1874,21 +2129,15 @@ ul {
   position: relative;
   width: 85%;
   height: 75%;
-  border: solid 1px #bd1701;
   max-width: 1000px; }
 
-.slider__row {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  border: solid 1px #adf442; }
-
 .slider__elem {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+  position: relative;
   min-width: 27%;
+  min-height: -webkit-fill-available !important;
   height: 100%;
   -webkit-box-align: center;
   -ms-flex-align: center;
@@ -1899,7 +2148,14 @@ ul {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
-      min-width: 33%; } }
+      min-width: 33%;
+      display: -webkit-box !important;
+      display: -ms-flexbox !important;
+      display: flex !important;
+      min-height: -webkit-fill-available !important;
+      -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+      justify-content: space-evenly; } }
   @media (max-width: 480px) {
     .slider__elem {
       min-width: 24%; } }
@@ -1930,15 +2186,16 @@ ul {
   display: flex;
   width: auto;
   height: 90%;
+  top: 2%;
   position: absolute;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  left: 2%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+  z-index: -2; }
   @media (max-width: 768px) {
     .slider__details {
       -webkit-box-orient: horizontal;
@@ -1947,7 +2204,7 @@ ul {
       flex-direction: row;
       width: 90%;
       height: auto;
-      top: 1%;
+      top: 0%;
       left: 5%; } }
 
 .composition__txt {
@@ -2069,7 +2326,6 @@ ul {
   flex-direction: column;
   -ms-flex-pack: distribute;
   justify-content: space-around;
-  height: 100%;
   width: 50%; }
   @media (max-width: 768px) {
     .slider__txt {
@@ -2115,7 +2371,13 @@ ul {
   font-family: 'Ubuntu';
   font-size: 14px;
   font-weight: 300;
-  line-height: 23.97px; }
+  line-height: 23.97px;
+  padding: 20%;
+  margin-left: -20%; }
+  @media (max-width: 768px) {
+    .content__txt-details {
+      padding: 0;
+      margin-left: 0; } }
 
 .burghers__btn {
   display: -webkit-box;
@@ -2141,16 +2403,16 @@ ul {
   cursor: pointer;
   padding: 0;
   border: none;
-  right: 15%;
-  bottom: 11%; }
+  bottom: 18%;
+  left: 75%; }
   @media (max-width: 768px) {
     .burghers__btn {
-      right: 25%;
-      bottom: 4%; } }
+      bottom: 10%;
+      left: 60%; } }
   @media (max-width: 480px) {
     .burghers__btn {
-      right: 17%;
-      bottom: 2%; } }
+      bottom: 8%;
+      left: 70%; } }
 
 .burghers__arrow {
   display: -webkit-box;
@@ -2164,6 +2426,27 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
+
+.slick-arrow {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.burghers__arrow-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  right: -3%; }
+
+.burghers__arrow-left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  top: 50%;
+  left: -3%; }
 
 .mobile-menu {
   display: -webkit-box;
@@ -2243,3 +2526,79 @@ ul {
 .circle-side {
   width: 0.6rem;
   height: 0.6rem; }
+
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+.slick-list {
+  position: relative;
+  overflow: hidden;
+  display: block;
+  margin: 0;
+  padding: 0; }
+  .slick-list:focus {
+    outline: none; }
+  .slick-list.dragging {
+    cursor: pointer;
+    cursor: hand; }
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  left: 0;
+  top: 0;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+  .slick-track:before, .slick-track:after {
+    content: "";
+    display: table; }
+  .slick-track:after {
+    clear: both; }
+  .slick-loading .slick-track {
+    visibility: hidden; }
+
+.slick-slide {
+  float: left;
+  height: 100%;
+  min-height: 1px;
+  display: none; }
+  [dir="rtl"] .slick-slide {
+    float: right; }
+  .slick-slide img {
+    display: block; }
+  .slick-slide.slick-loading img {
+    display: none; }
+  .slick-slide.dragging img {
+    pointer-events: none; }
+  .slick-initialized .slick-slide {
+    display: block; }
+  .slick-loading .slick-slide {
+    visibility: hidden; }
+  .slick-vertical .slick-slide {
+    display: block;
+    height: auto;
+    border: 1px solid transparent; }
+
+.slick-arrow.slick-hidden {
+  display: none; }
