--- a/css/blocks/people-page.css
+++ b/css/blocks/people-page.css
@@ -145,7 +145,7 @@
   background-color: #2f3234;
   border-radius: 0.3125rem; }
 
-.more__btn {
+.moreBtn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
