--- a/css/blocks/delivery.css
+++ b/css/blocks/delivery.css
@@ -364,8 +364,8 @@
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
-  width: 196px;
-  height: 106px;
+  width: 12.25rem;
+  height: 6.625rem;
   -webkit-box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   background-color: #ffffff;
@@ -385,8 +385,8 @@
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
-  width: 196px;
-  height: 106px;
+  width: 12.25rem;
+  height: 6.625rem;
   -webkit-box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   background-color: #ffffff;
@@ -401,7 +401,7 @@
   font-family: 'Ubuntu';
   font-size: 14px;
   font-weight: 300;
-  line-height: 24px; }
+  line-height: 1.5rem; }
 
 .send__false-message {
   text-align: center;
@@ -412,8 +412,8 @@
   line-height: 24px; }
 
 .button__true {
-  width: 97px;
-  height: 35px;
+  width: 6.0625rem;
+  height: 2.1875rem;
   border-radius: 5%;
   background-color: #e45028;
   padding: 0;
@@ -425,12 +425,12 @@
   font-family: 'Ubuntu';
   font-size: 13px;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase; }
 
 .button__false {
-  width: 97px;
-  height: 35px;
+  width: 6.0625rem;
+  height: 2.1875rem;
   border-radius: 5%;
   background-color: #e45028;
   padding: 0;
@@ -442,7 +442,7 @@
   font-family: 'Ubuntu';
   font-size: 13px;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase; }
 
 .send__false {
