--- a/css/blocks/delivery.scss
+++ b/css/blocks/delivery.scss
@@ -301,8 +301,8 @@ $phones: 480px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
-	width: 196px;
-	height: 106px;
+	width: 12.25rem;
+	height: 6.625rem;
 	box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
 	background-color: #ffffff;
 	border-radius: 4%;
@@ -312,8 +312,8 @@ $phones: 480px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
-	width: 196px;
-	height: 106px;
+	width: 12.25rem;
+	height: 6.625rem;
 	box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
 	background-color: #ffffff;
 	border-radius: 4%;
@@ -325,7 +325,7 @@ $phones: 480px;
 	font-family: 'Ubuntu';
 	font-size: 14px;
 	font-weight: 300;
-	line-height: 24px;
+	line-height: 1.5rem;
 }
 .send__false-message{
 	text-align: center;
@@ -336,8 +336,8 @@ $phones: 480px;
 	line-height: 24px;
 }
 .button__true{
-	width: 97px;
-	height: 35px;
+	width: 6.0625rem;
+	height: 2.1875rem;
 	border-radius: 5%;
 	background-color: #e45028;
 	padding: 0;
@@ -350,12 +350,12 @@ $phones: 480px;
 	font-family: 'Ubuntu';
 	font-size: 13px;
 	font-weight: 500;
-	line-height: 30px;
+	line-height: 1.875rem;
 	text-transform: uppercase;
 }
 .button__false{
-	width: 97px;
-	height: 35px;
+	width: 6.0625rem;
+	height: 2.1875rem;
 	border-radius: 5%;
 	background-color: #e45028;
 	padding: 0;
@@ -367,7 +367,7 @@ $phones: 480px;
 	font-family: 'Ubuntu';
 	font-size: 13px;
 	font-weight: 500;
-	line-height: 30px;
+	line-height: 1.875rem;
 	text-transform: uppercase;
 }
 .send__false{
