--- a/css/blocks/people-page.scss
+++ b/css/blocks/people-page.scss
@@ -130,7 +130,7 @@ $phones: 480px;
 	background-color: #2f3234;
 	border-radius: 0.3125rem;
 }
-.more__btn{
+.moreBtn{
 	display: flex;
 	align-items: center;
 	justify-content: center;
