--- a/css/main.css
+++ b/css/main.css
@@ -1006,7 +1006,7 @@ ul {
   background-color: #2f3234;
   border-radius: 0.3125rem; }
 
-.more__btn {
+.moreBtn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1865,8 +1865,8 @@ ul {
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
-  width: 196px;
-  height: 106px;
+  width: 12.25rem;
+  height: 6.625rem;
   -webkit-box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   background-color: #ffffff;
@@ -1886,8 +1886,8 @@ ul {
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
   justify-content: space-evenly;
-  width: 196px;
-  height: 106px;
+  width: 12.25rem;
+  height: 6.625rem;
   -webkit-box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   box-shadow: 0 0 40px rgba(0, 0, 1, 0.5);
   background-color: #ffffff;
@@ -1902,7 +1902,7 @@ ul {
   font-family: 'Ubuntu';
   font-size: 14px;
   font-weight: 300;
-  line-height: 24px; }
+  line-height: 1.5rem; }
 
 .send__false-message {
   text-align: center;
@@ -1913,8 +1913,8 @@ ul {
   line-height: 24px; }
 
 .button__true {
-  width: 97px;
-  height: 35px;
+  width: 6.0625rem;
+  height: 2.1875rem;
   border-radius: 5%;
   background-color: #e45028;
   padding: 0;
@@ -1926,12 +1926,12 @@ ul {
   font-family: 'Ubuntu';
   font-size: 13px;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase; }
 
 .button__false {
-  width: 97px;
-  height: 35px;
+  width: 6.0625rem;
+  height: 2.1875rem;
   border-radius: 5%;
   background-color: #e45028;
   padding: 0;
@@ -1943,7 +1943,7 @@ ul {
   font-family: 'Ubuntu';
   font-size: 13px;
   font-weight: 500;
-  line-height: 30px;
+  line-height: 1.875rem;
   text-transform: uppercase; }
 
 .send__false {
